# nanoEBM

./: .gitignore  COMPARISON_SUMMARY.md  QUICK_REFERENCE.md  README.md  UNDERSTANDING_EBM.md  academic_comparison.py  character_comparison.py  check_refinement_impact.py  compare_performance.py  compare_soft_vs_hard.py  debug_refine.py  debug_refinement.py  download_data.py  ebm_theory_analysis.py  final_comparison.py  find_refinement_impact.py  nanoebm_h100_full.ipynb  pyproject.toml  quick_demo.py  sample.py  simple_comparison.py  tiny_ebm.pt  tiny_gpt.pt  train.py  train_comparison_models.py  train_simple_models.py  viz.py  viz_academic.py  viz_comparison.py  viz_unified.py  wandb_dashboard.json
configs/: ebt_char_small.json  ebt_gpt2_small.json
core/: __init__.py  config.py  data.py  model.py  think.py  transformer.py  utils.py
nanoebm/: config.py  contrastive.py  data.py  model.py  model.py.backup  think.py  transformer.py  utils.py
out_ebt/: config.json  metrics.jsonl
scripts/: prepare_wikitext_gpt2.py  sample_ebt.py  train_ebt.py
